# benches

./: .gitignore  BENCHMARK_INCOMPATIBILITIES.md  CLAUDE.md  Makefile  README.md  SANDMARK_ADAPTATIONS.md
lib/: opam_auto_install.sh
macrobenchmarks/alt-ergo/: alt_ergo.build.sh
macrobenchmarks/coq/: coq.build.sh
macrobenchmarks/cpdf/: cpdf.build.sh
macrobenchmarks/cubicle/: cubicle.build.sh
macrobenchmarks/frama-c/: frama_c.build.sh
macrobenchmarks/menhir/: menhir.build.sh  sysver.mli
multicore/alloc_multicore/: alloc_multicore.build.sh  dune
multicore/graph500par/: dune  graph500par.build.deps.sh  kernel1_run_multicore.build.sh  sparseGraph.ml
multicore/multicore-effects/: algorithmic_differentiation.build.sh  dune  effect_throughput_perform.build.sh  effect_throughput_perform_drop.build.sh  effect_throughput_val.build.sh  eratosthenes.build.sh  rec_eff_ack.build.sh  rec_eff_evenodd.build.sh  rec_eff_fib.build.sh  rec_eff_motzkin.build.sh  rec_eff_sudan.build.sh  rec_eff_tak.build.sh  rec_seq_ack.build.sh  rec_seq_evenodd.build.sh  rec_seq_fib.build.sh  rec_seq_motzkin.build.sh  rec_seq_sudan.build.sh  rec_seq_tak.build.sh
multicore/multicore-gcroots/: globroots_mp.build.sh  globroots_seq.build.sh  globroots_sp.build.sh
multicore/multicore-grammatrix/: dune  grammatrix.build.sh  grammatrix_multicore.build.sh
multicore/multicore-minilight/: dune  minilight_multicore.build.sh
multicore/multicore-numerical/: LU_decomposition.build.sh  LU_decomposition_multicore.build.sh  binarytrees5_multicore.build.sh  dune  evolutionary_algorithm.build.sh  evolutionary_algorithm_multicore.build.sh  fannkuchredux_multicore.build.sh  floyd_warshall.build.sh  floyd_warshall_multicore.build.sh  game_of_life.build.sh  game_of_life_multicore.build.sh  mandelbrot6_multicore.build.sh  matrix_multiplication.build.sh  matrix_multiplication_multicore.build.sh  matrix_multiplication_tiling_multicore.build.sh  mergesort.build.sh  mergesort_multicore.build.sh  nbody.build.sh  nbody_multicore.build.sh  nqueens.build.sh  nqueens_multicore.build.sh  quicksort.build.sh  quicksort_multicore.build.sh  spectralnorm2_multicore.build.sh
multicore/multicore-structures/: dune  test_queue_parallel.build.sh  test_queue_sequential.build.sh  test_spsc_queue_parallel.build.sh  test_spsc_queue_pingpong_parallel.build.sh  test_spsc_queue_sequential.build.sh  test_stack_parallel.build.sh  test_stack_sequential.build.sh
multicore/oxcaml-prefetch/: dune  oxcaml_prefetch.build.sh
multicore/pingpong_multicore/: dune  pingpong_multicore.build.sh
simple/almabench/: almabench.build.sh  dune
simple/bdd/: bdd.build.sh  dune
simple/capi/: capi.build.sh
simple/fannkuchredux/: dune  fannkuchredux.build.sh
simple/hamming/: dune  hamming.build.sh
simple/hashcons/: bench_bdd.build.sh  bench_bdd.ml  bench_lambda.build.sh  bench_lambda.ml  dune
simple/kb/: dune  kb.build.sh  kb_no_exc.build.sh
simple/lexifi-g2pp/: lexifi-g2pp.build.sh
simple/markbench/: markbench.build.sh
simple/minilight/: minilight.build.sh
simple/numerical-analysis/: crout_decomposition.build.sh  dune  durand_kerner_aberth.build.sh  fft.build.sh  levinson_durbin.build.sh  naive_multilayer.build.sh  qr_decomposition.build.sh
simple/sequence/: dune  sequence_cps.build.sh
simple/simple-tests/: alloc.build.sh  dune  finalise.build.sh  lazy_primes.build.sh  lazylist.build.sh  lists.build.sh  morestacks.build.sh  stacks.build.sh  stress.build.sh  weak_htbl.build.sh  weak_htbl.ml  weakretain.build.sh
simple/soli/: dune  soli.build.sh
simple/stdlib/: array_bench.build.sh  big_array_bench.build.sh  bytes_bench.build.sh  dune  hashtbl_bench.build.sh  map_bench.build.sh  pervasives_bench.build.sh  set_bench.build.sh  stack_bench.build.sh  str_bench.build.sh  string_bench.build.sh
simple/zdd/: dune  zdd.build.sh
with_deps/benchmarksgame/: benchmarksgame.build.deps.sh  knucleotide.build.sh  knucleotide3.build.sh  regexredux2.build.sh  revcomp2.build.sh
with_deps/graph500seq/: graph500seq.build.deps.sh  graph500seq.build.sh
with_deps/mpl/: msort_ints.build.sh  msort_strings.build.sh  primes.build.sh  raytracer.build.sh  tokens.build.sh
with_packages/benchmarksgame/: binarytrees5.build.sh  fasta3.build.sh  fasta6.build.sh  mandelbrot6.build.sh  nbody.build.sh  pidigits5.build.sh  spectralnorm2.build.sh
with_packages/chameneos/: chameneos_redux_lwt.build.sh
with_packages/decompress/: test_decompress.build.sh
with_packages/owl/: owl_gc.build.sh
with_packages/sauvola/: contrast.build.sh
with_packages/test_sched/: dune  test_sched.build.sh
with_packages/thread-lwt/: thread_ring_lwt_mvar.build.sh  thread_ring_lwt_stream.build.sh
with_packages/valet/: test_lwt.build.sh
with_packages/yojson/: ydump.build.sh
with_packages/zarith/: zarith_fact.build.sh  zarith_fib.build.sh  zarith_pi.build.sh  zarith_tak.build.sh
